# DockerPlaying

./: .gitignore  CMakeLists.txt  README.md
client-server/: .env.template  Dockerfile.client  Dockerfile.server  client.cpp  docker-compose.yml  server.cpp
producer-consumer/: .env.template  .gitignore  CMakeLists.txt  Dockerfile  build.sh  consumer.cpp  producer.cpp  run.sh  stop.sh
